--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,13 @@ sourceSets {
 }
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation(platform('org.junit:junit-bom:5.7.1'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
