--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
     testImplementation(platform('org.junit:junit-bom:5.7.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
-    //testImplementation 'org.mockito:mockito-inline:3.7.7'
-    //testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
+    testImplementation 'org.mockito:mockito-inline:3.7.7'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
 }
 
