--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.7.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
 
-    implementation 'org.assertj:assertj-swing-junit:3.17.1'
+    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
     testImplementation 'org.assertj:assertj-core:3.11.1'
 
     testImplementation 'org.mockito:mockito-inline:3.7.7'
